DFES-20 good and bad

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.6</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/> <!-- lookup parent from repository r -->
 	</parent>
 	<groupId>com.qa</groupId>
 	<artifactId>santa_or_krampus</artifactId>
